@@ -25,8 +25,8 @@ plugins {
     id "com.gorylenko.gradle-git-properties" version "2.0.0"
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+sourceCompatibility = 11
+targetCompatibility = 11
 
 wrapper {
     gradleVersion = "5.2.1"
@@ -229,7 +229,7 @@ bootRun {
     jvmArgs = jvmArgsForTask + ["-Dspring.profiles.active=develop"]
 }
 
-// -ea -Dspring.profiles.active=unittest -Dfile.encoding=UTF-8 -Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP
+// -ea -Dspring.profiles.active=unittest -Dfile.encoding=UTF-8 -Dsun.nio.cs.map=x-windows-iso2022jp/ISO-2022-JP --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.ref=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.security=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED
 task testJUnit4AndSpock(type: Test) {
     jvmArgs = jvmArgsForTask +
             jvmArgsAddOpens +
